<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_item_1"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home"/>
    <item
        android:id="@+id/menu_item_2"
        android:enabled="true"
        android:icon="@drawable/ic_new_releases"
        android:title="@string/release_title"/>
    <item
        android:id="@+id/menu_item_3"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search"/>
</menu>