...
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    app:url="@{album.image.url}"
                    tools:src="@mipmap/ic_launcher" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/release_detail_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:navigationIcon="@drawable/ic_arrow_back"
                    app:title="@{album.name}" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
...
