...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:statusBarForeground="?attr/colorPrimaryVariant">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar_search"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:menu="@menu/search_menu"
                app:popupTheme="@style/AppTheme.DarkOverlay"
                app:title="@string/search_title" />
...
                    android:text="@string/chip_artist" />
            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_search"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:overScrollMode="never"
...
