<resources>
    <string name="app_name">MusicAC</string>
    <string name="connectivity_error">Connectivity Error</string>
    <string name="server_error">Server Error: </string>
    <string name="unknown_error">Unknown Error: </string>

    <string name="menu_home">Inicio</string>
    <string name="menu_releases">Nuevos lanzamientos</string>
    <string name="menu_search">Búsqueda</string>
    <!--HOME-->
    <string name="home_title">Inicio</string>
    <string name="dummy_artist_data">7ltDVBr6mKbRvohxheJ9h1,716NhGYqD1jl2wI1Qkgq36,52iwsT98xCoGgiGntTiR7K,4q3ewBCX7sLwd24euuV69X,1bAftSH8umNcGZ0uyV7LMg,790FomKkXshlbRYZFtlgla,2R21vXR83lH98kGeO99Y66,1Cs0zKBU1kc0i8ypK3B9ai</string>
    <string name="dummy_album_data">3RQQmkQEvNCY4prGKE6oc5,6jbtHi5R0jMXoliU2OS0lo,1wLB2bnCl2m5m9M9g8r93Y,7rE2qU0GsiIiNd4VPupV3B,4yNnIoQh8y1uDB6ScOS2vx,4PNqWiJAfjj32hVvlchV5u,6GHUywBU0u92lg0Dhrt40R,6gQKAYf3TJM9sppw3AtbHH</string>

    <!--    RELEASES-->
    <string name="release_title">Nuevos lanzamientos</string>
    <string name="release_detail_number_tracks">Número de canciones:&#160;</string>
    <string name="release_detail_date">Fecha de lanzamiento:&#160;</string>
    <string name="release_detail_popularity">Popularidad:&#160;</string>
    <string name="release_detail_artists">Artistas:&#160;</string>

    <!--    SEARCH-->
    <string name="search_title">Buscar</string>
    <string name="chip_artist">Artistas</string>
    <string name="chip_album">Álbums</string>
    <string name="artist_name">"Nombre Artístico: "</string>
    <string name="genres">"Géneros: "</string>
    <string name="total_followers">"Seguidores: "</string>
    <string name="test_field">Test Field Info</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="top_albums">Top Albums</string>
    <string name="recent_artists_title">Artistas Populares</string>
    <string name="recent_albums_title">Albumes Populares</string>
    <string name="_10">10%</string>
</resources>